# Azure-Agent-Tools

Field Extraction/: main.py  pyproject.toml
Field Extraction/config/: config_base.py  prompts.py  schemas.py
Field Extraction/core/: docs_extractor.py  docs_extractor_factory.py
Field Extraction/models/: azure_docs_extractor.py
